# doction

./: Cargo.toml  README.md
crates/doction/: Cargo.toml
crates/doction/src/: lib.rs
crates/node/src/: lib.rs
crates/notion/: Cargo.toml
crates/notion/src/: lib.rs
crates/prisma/: Cargo.toml
crates/prisma/src/: lib.rs  scanner.rs
crates/prisma/tests/: basic_schema.prisma  scanner_integration_test.rs  schema_and_datasource.prisma  schema_and_datasource_and_generator.prisma
examples/notion/: Cargo.toml
examples/notion/src/: main.rs
examples/prisma/: Cargo.toml
examples/prisma/src/: main.rs
