[package]
name = "prisma_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doction = {path = "../../crates/doction"}
node = {path = "../../crates/node"}
prisma = {path = "../../crates/prisma"}
